--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ replay_pid*
 /03 - Condicionales/Ejercicio09/nbproject/private/
 /03 - Condicionales/Ejercicio10_SistemaEcuacionesLineales/nbproject/private/
 /03 - Condicionales/Ejercicio10_SistemaEcuacionesLineales/build/
+/03 - Condicionales/Ejercicio16_Ecuacion2Grado/nbproject/private/
+/03 - Condicionales/Ejercicio16_Ecuacion2Grado/build/
+/03 - Condicionales/Ejercicio10_Sistema/nbproject/private/
+/03 - Condicionales/Ejercicio10_Sistema/build/
+/03 - Condicionales/Ejercicio15_FuncionTrozos/nbproject/private/
+/03 - Condicionales/Ejercicio15_FuncionTrozos/build/
