Añadido Ejercicio17 tema 3

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ replay_pid*
 /03 - Condicionales/Ejercicio10_Sistema/build/
 /03 - Condicionales/Ejercicio15_FuncionTrozos/nbproject/private/
 /03 - Condicionales/Ejercicio15_FuncionTrozos/build/
+/03 - Condicionales/Ejercicio17_EdadesEquivalentes/nbproject/private/
+/03 - Condicionales/Ejercicio17_EdadesEquivalentes/build/
