--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@ replay_pid*
 /03 - Condicionales/Ejercicio15_FuncionTrozos/build/
 /03 - Condicionales/Ejercicio17_EdadesEquivalentes/nbproject/private/
 /03 - Condicionales/Ejercicio17_EdadesEquivalentes/build/
+/04 - Bucles/Bucles-20/nbproject/private/
+/04 - Bucles/Bucles-20/build/
+/04 - Bucles/Bucles-21/nbproject/private/
+/04 - Bucles/Bucles-21/build/
+/04 - Bucles/Bucles-22/nbproject/private/
+/04 - Bucles/Bucles-22/build/
+/04 - Bucles/Bucles-23/nbproject/private/
+/04 - Bucles/Bucles-23/build/
