Añadido ejercicios bucles02 1 y 2

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ replay_pid*
 /04 - Bucles/Bucles-23/build/
 /03 - Condicionales/Practica_01_07_Bisiesto/nbproject/private/
 /03 - Condicionales/Practica_01_07_Bisiesto/build/
+/04 - Bucles/Bucles02-01_Tabla_de_multiplicar/nbproject/private/
+/04 - Bucles/Bucles02-01_Tabla_de_multiplicar/build/
+/04 - Bucles/Bucles02_02_Tablas_de_Multiplicar/nbproject/private/
+/04 - Bucles/Bucles02_02_Tablas_de_Multiplicar/build/
