Añadido ejercicio array 02-10 Diagonal

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ replay_pid*
 /04 - Bucles/Bucles02-01_Tabla_de_multiplicar/build/
 /04 - Bucles/Bucles02_02_Tablas_de_Multiplicar/nbproject/private/
 /04 - Bucles/Bucles02_02_Tablas_de_Multiplicar/build/
+/05 - Arrays/Ejercicios 02/10-Diagonal/nbproject/private/
+/05 - Arrays/Ejercicios 02/10-Diagonal/build/
