--- a/05 - Arrays/Ejercicios 02/09-MaxColumna/nbproject/private/private.properties
+++ b/05 - Arrays/Ejercicios 02/09-MaxColumna/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\IEUser\\AppData\\Roaming\\NetBeans\\14\\build.properties
+user.properties.file=C:\\Users\\jabue\\AppData\\Roaming\\NetBeans\\20\\build.properties
