Añadido ejercicio array 0302

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,11 @@ replay_pid*
 /05 - Arrays/Ejercicios 02/10-Diagonal/build/
 /05 - Arrays/Ejercicios 02/11-Cadenas/nbproject/private/
 /05 - Arrays/Ejercicios 02/11-Cadenas/build/
+/99 - Pruebas/OchoReinas/nbproject/private/
+/99 - Pruebas/OchoReinas/build/
+/99 - Pruebas/OchoReinasC/nbproject/private/
+/99 - Pruebas/OchoReinasC/build/
+/99 - Pruebas/BarcosColocacion/nbproject/private/
+/99 - Pruebas/BarcosColocacion/build/
+/99 - Pruebas/Ejercicio0302/nbproject/private/
+/99 - Pruebas/Ejercicio0302/build/
