--- a/99 - Pruebas/OchoReinasC/nbproject/project.properties
+++ b/99 - Pruebas/OchoReinasC/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/04-FiltrarLista01.jar
+dist.jar=${dist.dir}/OchoReinasC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/04-FiltrarLista01
+dist.jlink.output=${dist.jlink.dir}/OchoReinasC
 excludes=
 includes=**
 jar.compress=false
@@ -44,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=20
+javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=04-FiltrarLista01
-main.class=pkg04.filtrarlista01.FiltrarLista01
+jlink.launcher.name=OchoReinasC
+main.class=ochoreinasc.OchoReinasC
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
