Añadido ejercicio array 0309 ap 11

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ replay_pid*
 /99 - Pruebas/BarcosColocacion/build/
 /99 - Pruebas/Ejercicio0302/nbproject/private/
 /99 - Pruebas/Ejercicio0302/build/
+/05 - Arrays/Ejercicios 03/Ejercicio0303/nbproject/private/
+/05 - Arrays/Ejercicios 03/Ejercicio0303/build/
