Añadidos nuevos ejercicios

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,11 @@ replay_pid*
 /05 - Arrays/Ejercicios 03/Ejercicio0317/build/
 /05 - Arrays/Ejercicios 03/Ejercicio0316/nbproject/private/
 /05 - Arrays/Ejercicios 03/Ejercicio0316/build/
+/Examenes/Simulacro 2/AlturaMaximaPaises/nbproject/private/
+/Examenes/Simulacro 2/AlturaMaximaPaises/build/
+/Examenes/Simulacro 2/Taquillas/nbproject/private/
+/Examenes/Simulacro 2/Taquillas/build/
+/Examenes/Simulacro 2/PrimosEnArray/nbproject/private/
+/Examenes/Simulacro 2/PrimosEnArray/build/
+/Examenes/Examen 1ev/Elecciones/build/
+/Examenes/Examen 1ev/Elecciones/nbproject/private/
