Ejercicios tema 6 funciones

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,8 @@ replay_pid*
 /Examenes/Simulacro 2/PrimosEnArray/build/
 /Examenes/Examen 1ev/Elecciones/build/
 /Examenes/Examen 1ev/Elecciones/nbproject/private/
+/Examenes/alumnos/Ejercicio1/nbproject/private/
+/Examenes/alumnos/Ejercicio1/build/
+/06 - Funciones/Practicas/ImprimirCalendario/nbproject/private/
+/06 - Funciones/Practicas/ImprimirCalendario/build/
+/06 - Funciones/Practicas/ImprimirCalendario/dist/
