Modificando Siete y Media

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ replay_pid*
 /99 - Pruebas/Objetos_Mutables_Inmutables/build/
 /99 - Pruebas/Corregir/nbproject/private/
 /99 - Pruebas/Corregir/build/
+/08 - POO II/AgeOfEmpiresPaP/nbproject/private/
