--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,13 @@ replay_pid*
 /99 - Pruebas/Corregir/nbproject/private/
 /99 - Pruebas/Corregir/build/
 /08 - POO II/AgeOfEmpiresPaP/nbproject/private/
+/09 - TiposLineales/ContarPalabras/nbproject/private/
+/09 - TiposLineales/ContarPalabras/build/
+/09 - TiposLineales/Examen2EvEjercicio1/nbproject/private/
+/09 - TiposLineales/Examen2EvEjercicio1/build/
+/09 - TiposLineales/Examen2evEjercicio2/nbproject/private/
+/09 - TiposLineales/Examen2evEjercicio2/build/
+/09 - TiposLineales/Examen2evEjercicio3a/nbproject/private/
+/09 - TiposLineales/Examen2evEjercicio3a/build/
+/09 - TiposLineales/Examen2evEjercicio4/nbproject/private/
+/09 - TiposLineales/Examen2evEjercicio4/build/
