modificando ejercicios ficheros

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,5 @@ replay_pid*
 /12 - EntornoGrafico/05 - Colecciones JavaFX/listViewEjemplo - Alumnos - MVC/target/
 /12 - EntornoGrafico/05 - Colecciones JavaFX/variasVentanas/target/
 /12 - EntornoGrafico/02 - Controles/ejemploMetodoConvenienciaHelloWorld/target/
+/11 - Ficheros/ToDo/nbproject/private/
+/11 - Ficheros/ToDo/build/
