--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,11 @@ replay_pid*
 /12 - EntornoGrafico/02 - Controles/ejemploMetodoConvenienciaHelloWorld/target/
 /11 - Ficheros/ToDo/nbproject/private/
 /11 - Ficheros/ToDo/build/
+/11 - Ficheros/TestFileClass/nbproject/private/
+/11 - Ficheros/TestFileClass/build/
+/11 - Ficheros/TestEscribirDatosTexto/nbproject/private/
+/11 - Ficheros/TestEscribirDatosTexto/build/
+/11 - Ficheros/EjemploFicheroTexto_ReemplazarTexto/nbproject/private/
+/11 - Ficheros/EjemploFicheroTexto_ReemplazarTexto/build/
+/11 - Ficheros/Ejercicio02_ContenidoDirectorioYSubdirectorios/nbproject/private/
+/11 - Ficheros/Ejercicio02_ContenidoDirectorioYSubdirectorios/build/
