ejercicios ficheros añadidos

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,5 @@ replay_pid*
 /11 - Ficheros/EjemploFicheroTexto_ReemplazarTexto/build/
 /11 - Ficheros/Ejercicio02_ContenidoDirectorioYSubdirectorios/nbproject/private/
 /11 - Ficheros/Ejercicio02_ContenidoDirectorioYSubdirectorios/build/
+/11 - Ficheros/PracticaJSON/nbproject/private/
+/11 - Ficheros/PracticaJSON/build/
