--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,4 @@ replay_pid*
 /Examenes/alumnos/JAVIER POMARES GÓMEZ_20019469_assignsubmission_file_Examen-2Evaluacion/Examen-2Evaluacion/Examen2evEjercicio2/nbproject/private/
 /Examenes/alumnos/JAVIER POMARES GÓMEZ_20019469_assignsubmission_file_Examen-2Evaluacion/Examen-2Evaluacion/Examen2evEjercicio2/build/
 /Examenes/alumnos/JAVIER POMARES GÓMEZ_20019469_assignsubmission_file_Examen-2Evaluacion/Examen-2Evaluacion/Examen2evEjercicio4/nbproject/private/
+/99 - Pruebas/arrastreEntrePilas/target/
