--- a/.gitignore
+++ b/.gitignore
@@ -271,3 +271,9 @@ replay_pid*
 /11 - Ficheros/NumerarLineasFichero/build/
 /11 - Ficheros/TestTextoABinario/nbproject/private/
 /11 - Ficheros/TestTextoABinario/build/
+/11 - Ficheros/Ejercicio02_DiarioPersonal/nbproject/private/
+/11 - Ficheros/Ejercicio02_DiarioPersonal/build/
+/11 - Ficheros/Ejercicio04_Salarios/nbproject/private/
+/11 - Ficheros/Ejercicio04_Salarios/build/
+/99 - Pruebas/javafx/demoCicloVida/target/
+/12 - EntornoGrafico/03 - Eventos/03_Ejercicio05_MultiplesManejadores/target/
