--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,4 @@ replay_pid*
 /99 - Pruebas/javafx/demoCicloVida/target/
 /12 - EntornoGrafico/03 - Eventos/03_Ejercicio05_MultiplesManejadores/target/
 /12 - EntornoGrafico/02 - Controles/02_ejercicio_03_RelojAnalogico/target/
+/12 - EntornoGrafico/03 - Eventos/03_Ejercicio06_BounceBall/target/
