--- a/.gitignore
+++ b/.gitignore
@@ -279,3 +279,6 @@ replay_pid*
 /12 - EntornoGrafico/03 - Eventos/03_Ejercicio05_MultiplesManejadores/target/
 /12 - EntornoGrafico/02 - Controles/02_ejercicio_03_RelojAnalogico/target/
 /12 - EntornoGrafico/03 - Eventos/03_Ejercicio06_BounceBall/target/
+/12 - EntornoGrafico/05 - Colecciones JavaFX/ejemplo01EjemploFXCollectionsFXML/target/
+/12 - EntornoGrafico/05 - Colecciones JavaFX/ejemplo02ListViewLenguajesImagenesCallback/target/
+/12 - EntornoGrafico/Ejemplos/radioButtonTest/target/
