--- a/07 - POO/Ejemplo01/nbproject/private/private.properties
+++ b/07 - POO/Ejemplo01/nbproject/private/private.properties
@@ -1,2 +1,8 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\IEUser\\AppData\\Roaming\\NetBeans\\14\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\jabue\\AppData\\Roaming\\NetBeans\\28\\build.properties
