--- a/07 - POO/Ejemplo06/nbproject/project.properties
+++ b/07 - POO/Ejemplo06/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Ejemplo01
-application.vendor=jabue
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Ejemplo01.jar
+dist.jar=${dist.dir}/Ejemplo06.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Ejemplo01
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/Ejemplo06
 excludes=
 includes=**
 jar.compress=false
@@ -46,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=17
-javac.target=17
+javac.source=25
+javac.target=25
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Ejemplo01
-main.class=ejemplo01.Ejemplo01
+jlink.launcher.name=Ejemplo06
+main.class=ejemplo06.Ejemplo06
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -81,6 +79,10 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+# Space-separated list of JVM arguments used when running the project.
+# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
+# To set system properties for unit tests define test-sys-prop.name=value:
+run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
